# learn-cpp

./: .gitignore  .mcp.json  CMakeLists.txt  main.cpp
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: brainstormer.md
.claude/commands/: brainstorm.md
.claude/skills/mermaid/: SKILL.md
.claude/skills/mermaid/examples/: architecture.md  block.md
.claude/skills/microsoft-code-reference/: SKILL.md
.claude/skills/microsoft-docs/: SKILL.md
.github/: README.md
.obsidian/: app.json  appearance.json  core-plugins.json  graph.json  hotkeys.json  workspace.json
.obsidian/themes/Dracula Official/: theme.css
